# My2dGameEngine

2dgameengine-210109-235347/2dgameengine/: CMakeLists.txt
2dgameengine-210109-235347/2dgameengine/src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
2dgameengine-210109-235347/2dgameengine/src/AssetManager/: AssetManager.cpp  AssetManager.h
2dgameengine-210109-235347/2dgameengine/src/Components/: SpriteComponent.h  TransformComponent.h
2dgameengine-210109-235347/2dgameengine/src/ECS/: ECS.h  ESC.cpp
2dgameengine-210109-235347/2dgameengine/src/Game/: Game.cpp  Game.h
2dgameengine-210109-235347/2dgameengine/src/Logger/: Logger.cpp
2dgameengine-210109-235347/2dgameengine/src/Systems/: MovementSystem.h  RenderSystem.h
